fix: navigation spacing [NP-816] (#219)
- Site Navigation buttons no longer introduce excess spacing when tabbing
- Site Navigation no longer outline links in blue causing a confusing visual effect which does not align with Figma design
- Added visual regression tests so that appearance of Site Navigation button active/focus state.

--- a/scss/6-components/_navigation.scss
+++ b/scss/6-components/_navigation.scss
@@ -104,7 +104,8 @@ nav,
       background-color: $cads-palette__white;
       color: $cads-palette__heritage-blue;
       border: 2px solid $cads-palette__heritage-yellow;
-      padding: calc(1rem - 2px);
+      padding: calc(1rem - 2px) calc(1rem - 12px);
+      outline: none;
     }
   }
 
